02-rollouts/traefik/httproute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit-5rps
  namespace: api
spec:
  rateLimit:
    average: 10
    period: 1

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-httproute
  namespace: api
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
  - gwapi.192.168.39.195.nip.io
  rules:
  - matches:
    - path:
        value: /
        type: PathPrefix
    backendRefs:
    - name: api-svc
      port: 3000
      weight: 75
    - name: apiv2-svc
      port: 3000
      weight: 25
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: X-API
          value: api
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: ratelimit-5rps
